fixed wrapping and card size issues for pc size screens

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,9 @@ body {
 
 .cardboxes {
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .black {
@@ -50,9 +53,9 @@ body {
   
   box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.85);
   margin: 1rem;
-  width: 18.75rem;
-  min-width: 18.75rem;
-  height: 25rem;
+  width: 15rem;
+  min-width: 15rem;
+  height: 20rem;
   position: relative;
   overflow: hidden;
   display: flex;
